Set body overflow to hidden to prevent bad ux when tooltip is appear

--- a/apps/irms/frontend/src/styles/main.scss
+++ b/apps/irms/frontend/src/styles/main.scss
@@ -1,5 +1,6 @@
 body {
   margin: 0.5rem;
+  overflow: hidden;
 }
 
 // .jqx-tabs-header {
